@startuml

title __BOSS's Class Diagram__\n

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.boss {
        class gamesource.battleState.character.enemy.boss.Ace {
            - turnCount : int
            + Ace()
            + enemyAction()
            + getDamage()
            + startTurn()
            + updateHints()
            # attack()
            # attack2()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.boss {
        class gamesource.battleState.character.enemy.boss.Faker {
            - lastDamageSum : int
            + Faker()
            + enemyAction()
            + getDamage()
            + startTurn()
            + updateHints()
            # $()
            # attack()
            # attack2()
            # attack3()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.boss {
        class gamesource.battleState.character.enemy.boss.Tuxnet {
            - lastDamageSum : int
            + Tuxnet()
            + enemyAction()
            + getDamage()
            + startTurn()
            + updateHints()
            # attack()
            # attack2()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  namespace gamesource {
    namespace battleState.character {
      namespace enemy.boss {
        class gamesource.battleState.character.enemy.boss.Zac {
            - canImprove : boolean
            + Zac()
            + enemyAction()
            + getDamage()
            + startTurn()
            + updateHints()
            # attack()
            # attack2()
            # getBlessing()
            # getBlockAndAttack()
            # getBlocks()
            # releaseBuff()
            # releaseCurses()
            # releaseDebuff()
        }
      }
    }
  }
  

  gamesource.battleState.character.enemy.boss.Ace -up-|> gamesource.battleState.character.Enemy
  gamesource.battleState.character.enemy.boss.Faker -up-|> gamesource.battleState.character.Enemy
  gamesource.battleState.character.enemy.boss.Tuxnet -up-|> gamesource.battleState.character.Enemy
  gamesource.battleState.character.enemy.boss.Zac -up-|> gamesource.battleState.character.Enemy




@enduml
